[gd_scene load_steps=5 format=2]

[ext_resource path="res://Tools/BiopsyNeedle/BiopsyOrgan.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tools/Syringe/Adenosine Zone.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 144.0

[sub_resource type="CircleShape2D" id=2]
radius = 144.222

[node name="BiopsyOrgan" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 128
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.294118, 0.2, 0.0823529, 1 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2147483712
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="StateChangeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="StateChangeTimer" to="." method="_on_BiopsyStateChangeTimer_timeout"]
